tests/sources/invalid/scoping/parameter_shadowing_errors.fire
// Function and class-method parameters that shadow an already-declared
// outer-scope variable are rejected.

import @firescript/std.io.println;

outerValue: int32 = 10;

fn useOuter(outerValue: int32) -> void {  //~ ERROR FS-SEM-0010 @13
    println(outerValue);
}

class Holder {
    v: int32;

    fn Holder(outerValue: int32) {  //~ ERROR FS-SEM-0010 @15
        this.v = outerValue;
    }
}
